Fix navbar cutting off top content

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -4,4 +4,9 @@ body {
   h1 {
     color: #244751;
   }
+
+}
+
+.main-container {
+  margin-top: 52px;
 }
